xff/deploy-test-headless.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: headless
  name: deploy-headless-xff
spec:
  replicas: 1
  selector:
    matchLabels:
      app: headless
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: headless
    spec:
      containers:
      - name: abc
        image: kennethreitz/httpbin
        resources:
          limits:
            memory: "128Mi"
            cpu: "100m"
        ports:
        - containerPort: 80
