xff/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: xff
spec:
  type: ClusterIP
  selector:
    app: xff
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: http
